tests/ui/const-generics/mgca/bad-const-arg-fn-154539.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/bad-const-arg-fn-154539.rs:5:33
   |
LL |           core::direct_const_arg!(|| {
   |  _________________________________^
LL | |
LL | |             use std::io::*;
LL | |             write!(_, "")
LL | |         })
   | |_________^

error: aborting due to 1 previous error

